gen/AlgoritmiaParser.py
# Generated from C:/Users/mocai/Downloads/ProyectoAlgoritmia/Algoritmia.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AlgoritmiaParser ( Parser ):

    grammarFileName = "Algoritmia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'|:'", "':|'", "'{'", "'}'", "'['", 
                     "']'", "'('", "')'", "'if'", "':else'", "'while'", 
                     "'<w>'", "'<?>'", "'(:)'", "'<-'", "'<<'", "'8<'", 
                     "'#'", "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", 
                     "'>='", "'<='", "'='", "'/='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IF", "ELSE", "WHILE", "WRITE_OP", 
                      "READ_OP", "PLAY_OP", "ASSIGN", "APPEND", "CUT", "LEN", 
                      "PLUS", "MINUS", "MULT", "DIV", "MOD", "GT", "LT", 
                      "GE", "LE", "EQ", "NEQ", "NOTE", "PROC_ID", "VAR_ID", 
                      "STRING", "INT", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_procedure = 1
    RULE_parameters = 2
    RULE_instruction = 3
    RULE_writeStatement = 4
    RULE_playStatement = 5
    RULE_assignmentStatement = 6
    RULE_ifStatement = 7
    RULE_whileStatement = 8
    RULE_callStatement = 9
    RULE_listAddStatement = 10
    RULE_listCutStatement = 11
    RULE_expression = 12
    RULE_term = 13

    ruleNames =  [ "program", "procedure", "parameters", "instruction", 
                   "writeStatement", "playStatement", "assignmentStatement", 
                   "ifStatement", "whileStatement", "callStatement", "listAddStatement", 
                   "listCutStatement", "expression", "term" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    IF=10
    ELSE=11
    WHILE=12
    WRITE_OP=13
    READ_OP=14
    PLAY_OP=15
    ASSIGN=16
    APPEND=17
    CUT=18
    LEN=19
    PLUS=20
    MINUS=21
    MULT=22
    DIV=23
    MOD=24
    GT=25
    LT=26
    GE=27
    LE=28
    EQ=29
    NEQ=30
    NOTE=31
    PROC_ID=32
    VAR_ID=33
    STRING=34
    INT=35
    COMMENT=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def procedure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ProcedureContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ProcedureContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AlgoritmiaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.procedure()
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROC_ID(self):
            return self.getToken(AlgoritmiaParser.PROC_ID, 0)

        def parameters(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ParametersContext,0)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.InstructionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.InstructionContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_procedure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedure" ):
                listener.enterProcedure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedure" ):
                listener.exitProcedure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure" ):
                return visitor.visitProcedure(self)
            else:
                return visitor.visitChildren(self)




    def procedure(self):

        localctx = AlgoritmiaParser.ProcedureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procedure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(AlgoritmiaParser.PROC_ID)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 34
                self.parameters()


            self.state = 37
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 38
                    self.instruction() 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1 or _la==3:
                self.state = 44
                _la = self._input.LA(1)
                if not(_la==1 or _la==3):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_ID(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.VAR_ID)
            else:
                return self.getToken(AlgoritmiaParser.VAR_ID, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = AlgoritmiaParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 47
                self.match(AlgoritmiaParser.VAR_ID)
                self.state = 50 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==33):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def writeStatement(self):
            return self.getTypedRuleContext(AlgoritmiaParser.WriteStatementContext,0)


        def playStatement(self):
            return self.getTypedRuleContext(AlgoritmiaParser.PlayStatementContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(AlgoritmiaParser.AssignmentStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(AlgoritmiaParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(AlgoritmiaParser.WhileStatementContext,0)


        def callStatement(self):
            return self.getTypedRuleContext(AlgoritmiaParser.CallStatementContext,0)


        def listAddStatement(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ListAddStatementContext,0)


        def listCutStatement(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ListCutStatementContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = AlgoritmiaParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruction)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.writeStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.playStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.assignmentStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.ifStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.whileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.callStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.listAddStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 59
                self.listCutStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE_OP(self):
            return self.getToken(AlgoritmiaParser.WRITE_OP, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_writeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteStatement" ):
                listener.enterWriteStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteStatement" ):
                listener.exitWriteStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStatement" ):
                return visitor.visitWriteStatement(self)
            else:
                return visitor.visitChildren(self)




    def writeStatement(self):

        localctx = AlgoritmiaParser.WriteStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_writeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(AlgoritmiaParser.WRITE_OP)
            self.state = 64 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 63
                    self.expression(0)

                else:
                    raise NoViableAltException(self)
                self.state = 66 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLAY_OP(self):
            return self.getToken(AlgoritmiaParser.PLAY_OP, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_playStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlayStatement" ):
                listener.enterPlayStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlayStatement" ):
                listener.exitPlayStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlayStatement" ):
                return visitor.visitPlayStatement(self)
            else:
                return visitor.visitChildren(self)




    def playStatement(self):

        localctx = AlgoritmiaParser.PlayStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_playStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(AlgoritmiaParser.PLAY_OP)
            self.state = 69
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_ID(self):
            return self.getToken(AlgoritmiaParser.VAR_ID, 0)

        def ASSIGN(self):
            return self.getToken(AlgoritmiaParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = AlgoritmiaParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(AlgoritmiaParser.VAR_ID)
            self.state = 72
            self.match(AlgoritmiaParser.ASSIGN)
            self.state = 73
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(AlgoritmiaParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.InstructionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.InstructionContext,i)


        def ELSE(self):
            return self.getToken(AlgoritmiaParser.ELSE, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = AlgoritmiaParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(AlgoritmiaParser.IF)
            self.state = 76
            self.expression(0)
            self.state = 77
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 78
                    self.instruction() 
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 84
                self.match(AlgoritmiaParser.ELSE)
                self.state = 85
                _la = self._input.LA(1)
                if not(_la==1 or _la==2):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 86
                        self.instruction() 
                    self.state = 91
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)



            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 94
                _la = self._input.LA(1)
                if not(_la==1 or _la==3):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(AlgoritmiaParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.InstructionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.InstructionContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = AlgoritmiaParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(AlgoritmiaParser.WHILE)
            self.state = 98
            self.expression(0)
            self.state = 99
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 100
                    self.instruction() 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 106
                _la = self._input.LA(1)
                if not(_la==1 or _la==3):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROC_ID(self):
            return self.getToken(AlgoritmiaParser.PROC_ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_callStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallStatement" ):
                listener.enterCallStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallStatement" ):
                listener.exitCallStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallStatement" ):
                return visitor.visitCallStatement(self)
            else:
                return visitor.visitChildren(self)




    def callStatement(self):

        localctx = AlgoritmiaParser.CallStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_callStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(AlgoritmiaParser.PROC_ID)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.expression(0) 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListAddStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_ID(self):
            return self.getToken(AlgoritmiaParser.VAR_ID, 0)

        def APPEND(self):
            return self.getToken(AlgoritmiaParser.APPEND, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_listAddStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListAddStatement" ):
                listener.enterListAddStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListAddStatement" ):
                listener.exitListAddStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAddStatement" ):
                return visitor.visitListAddStatement(self)
            else:
                return visitor.visitChildren(self)




    def listAddStatement(self):

        localctx = AlgoritmiaParser.ListAddStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_listAddStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(AlgoritmiaParser.VAR_ID)
            self.state = 117
            self.match(AlgoritmiaParser.APPEND)
            self.state = 118
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListCutStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUT(self):
            return self.getToken(AlgoritmiaParser.CUT, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_listCutStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListCutStatement" ):
                listener.enterListCutStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListCutStatement" ):
                listener.exitListCutStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListCutStatement" ):
                return visitor.visitListCutStatement(self)
            else:
                return visitor.visitChildren(self)




    def listCutStatement(self):

        localctx = AlgoritmiaParser.ListCutStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_listCutStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(AlgoritmiaParser.CUT)
            self.state = 121
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class TermExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmiaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(AlgoritmiaParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermExpr" ):
                listener.enterTermExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermExpr" ):
                listener.exitTermExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermExpr" ):
                return visitor.visitTermExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmiaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,i)

        def MULT(self):
            return self.getToken(AlgoritmiaParser.MULT, 0)
        def DIV(self):
            return self.getToken(AlgoritmiaParser.DIV, 0)
        def MOD(self):
            return self.getToken(AlgoritmiaParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivExpr" ):
                listener.enterMulDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivExpr" ):
                listener.exitMulDivExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivExpr" ):
                return visitor.visitMulDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class LenExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AlgoritmiaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEN(self):
            return self.getToken(AlgoritmiaParser.LEN, 0)
        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)

